# devcontainer-sample

./: .env.sample  .gitconfig.example  .gitignore  .pre-commit-config.yaml  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: release-drafter.yml
.github/workflows/: python-app.yml
backend/app/: Dockerfile  pyproject.toml
backend/app/app/: main.py
backend/app/app/api/qraphql/: router.py
backend/app/app/domain/tasks/: inputs.py  models.py  repositories.py  resolvers.py  services.py  types.py
